resources/css/queries.css
/*big tablet to 1200px, width smaller than pixel row*/
@media only screen and (max-width: 1200px) {

    .hero-box {
        width: 100%;
        padding:0 2%;
    }
    
    .row{ padding:0 2%; }
    
    .section-easy-setup{
        padding-top:80px;
    }
    
    .section-easy-setup img{
        height:350px;
        margin-top:-30%;
    }
    
}

/*ipad in portrait mode 768-1023px*/
@media only screen and (max-width: 1023px) {

    body{ font-size:18px;}
    section{ padding: 60px 0;}
    
    .section-modular{
        padding: 100px 0;
    }
    
    .main-nav{display:block;}
    
    .config-img{
        height:250px;
    }
    
    .section-easy-setup img{
        height:300px;
    }
    

}

/* small phones to small tablets 481-767px*/
@media only screen and (max-width: 767px) {
    
    body{font-size: 16px;}
    section{padding:30px 0;}
    
    .row,
    hero-text-box{padding:0, 4%;}
    
    p{text-align: center}
    
    header p{text-align: left}
    
    .col{
        width:100%;
        margin:0 0 4% 0;
    }

    .logo{
        height:50px;
    }
    
    .main-nav{display:none;}
    
    .main-nav{
        float:left;
        margin-top:15px;
        padding:10px 0;
        font-size:100%;
    }
    
    .main-nav li{
        display: block; 
    }
    
    .main-nav li a:link,
    .main-nav li a:visited{
        display: block; 
        border:0
    }
    
    .sticky .main-nav{
        margin-top:5px;
    }

    .sticky .main-nav li a:link,
    .sticky .main-nav li a:visited{padding: 10px 0;}
    .sticky .mobile-nav-icon {margin-top: 10px;}
    .sticky .mobile-nav-icon i{color:#555;}
    
    .mobile-nav-icon {
        display: inline-block;
    }
    
    h1{font-size:180%;}
    h2{font-size:150%;}
    h3{font-size:110%;}
    
    
    .section-modular{
        padding: 60px 0;
    }
    .modular-text{
        text-align:center;
    }
    
    .bx-wrapper {
        margin-top:100px;
        padding:0;
        vertical-align: bottom;
    }
    
    .section-easy-setup h3{
        text-align: center;
    }

    .section-easy-setup p{
        text-align: left;
    }
    
    .section-configuration h3{
        text-align: center;
    }

    .section-configuration p{
        text-align: left;
    }
    
    .config-text{
        padding:0;
    }
    
    .config-img{
        margin:0 auto;
    }
    
    .section-easy-setup img{
        margin:0 auto;
        height:400px;
        transform: none;
    }
    
    #shop-info-screen{
        display:none;
    }
    
    .section-pricing ul li{
       font-size:100%;
    }
    
    .plan-box{
        padding-top: 10px;
    }
    
    .plan-box div:first-child{
        padding:10px 0;
    }
    
    #plan-box-custom{
        padding-top:20px;
        padding-bottom: 10px;
    }
    
    #plan-box-custom h3{
        font-size: 180%;
    }
    
    .plan-price{
        font-weight: 300;
    }
    
    .plan-price span{
        font-size: 70%;
    }
    
}
    
/* small phones 0-480px */
@media only screen and (max-width: 480px){
    section{padding:25px 0;}
    

    .logo-colour{
        height:30px;
        margin-top:11px;
    }
    
    
    .footer-nav{
    margin-left: 10%;
    }
    
    .social-links {
    list-style: none;
    float:left;
    margin-left: 30%;
    }   
    
    .config-img{
        height:200px;
    }
}

